remove and comment and fix issue where by line hover card was showing up a bit too high

--- a/packages/nouns-webapp/src/components/ByLineHoverCard/ByLineHoverCard.module.css
+++ b/packages/nouns-webapp/src/components/ByLineHoverCard/ByLineHoverCard.module.css
@@ -30,7 +30,7 @@
 .spinnerWrapper {
   color: var(--brand-gray-light-text);
   width: 100%;
-  height: 185px;
+  height: 120px;
   display: flex;
   flex-direction: column;
   justify-content: center;
